2010-02-13  vadim  <vadim@vk.crocodile.org>

	* OSConfigurator_bsd.cpp (OSConfigurator_bsd::configureInterfaces):
	generated script compares vlan and carp interfaces of the firewall
	with objects created in fwbuilder GUI and deletes any such
	interfaces it finds if they are not defined in fwbuilder. This is
	done even when there are no vlan or carp interfaces in fwbuilder
	configuration. This code is added only when checkboxes "Configure
	VLAN interfaces" and "Configure CARP interfaces" are checked.

	* OSConfigurator_bsd.cpp (OSConfigurator_bsd::configureInterfaces):
	New feature: generated script adds and removes CARP interfaces
	incrementally. This means it is not going to run ifconfig command
	to create carp interface if it is already there and will run
	"ifconfig carp1 destroy" command if interface carp1 has been
	removed in fwbuilder GUI to delete it on the firewall.

	* OSConfigurator_bsd.cpp (OSConfigurator_bsd::configureInterfaces):
	New feature: incremental VLAN interface management for OpenBSD and
	FreeBSD. When user adds or removes VLAN subinterface in fwbuilder
	GUI, geenrated script executes appropriate ifconfig commands to
	add or remove corresponding vlan pseudo-interface on the firewall
	machine.

2010-02-12  vadim  <vadim@vk.crocodile.org>

	* OSConfigurator_bsd.cpp (OSConfigurator_bsd::updateAddressesOfInterfaceCall):
	New feature: incremental IP address management for OpenBSD and
	FreeBSD. Generated script adds and removes ipv4 and ipv6 addresses
	of interfaces as needed. When user adds an address in the
	fwbuilder object, the script adds it. Second run of the same script
	does nothing. If user removes an address in fwbuilder, generated
	script removes it from the interfaces to bring actual configuration
	of the machine in sync with fwbuilder objects.

2010-02-10  yalovoy <yalovoy@gmail.com>
	* src/gui/RuleSetModel.cpp: fixes #1223: GUI crash while adding a host to a group
	 To reproduce: