@@ -1,0 +1,17 @@
+## -*- mode: shell-script; -*- 
+##
+## Lines that start with "##" will be removed before this code is
+## added to the generated script. Regular shell comments can be added
+## using single "#", these will appear in the script.
+##
+##
+## PFSYNC
+##      ifconfig pfsync-interface [maxupd n] [[-]syncdev iface]
+##      [[-]syncpeer peer_address]
+##
+## for pfsync and CARP see http://www.kernel-panic.it/openbsd/carp/
+## "Redundant firewalls with OpenBSD, CARP and pfsync"
+
+$IFCONFIG pfsync0 syncdev {{$syncdev}} {{if have_syncpeer}} syncpeer {{$syncpeer}}{{endif}}
+$IFCONFIG pfsync0 up
+
